syntax = "proto3";
package xgame;
option go_package = "golang.xrpc";

message test_msg {
  string msg = 1;
  int32 delayTime = 2;  // 延迟时间秒
  int32 rand = 3;
  bytes testBt = 4;
}

message ReqGetPidList {
}

message ReplyGetPidList {
  repeated bytes pids = 1;
}

// Type: Actor
service TestService {
  rpc Test(test_msg) returns (test_msg);
  rpc GetPidList(ReqGetPidList) returns (ReplyGetPidList);
}

//Type: Node
service TestNodeService {
  rpc NodeTest(test_msg) returns (test_msg);
  rpc NodeGetPidList(ReqGetPidList) returns (ReplyGetPidList);
}